--- a/www/index.html
+++ b/www/index.html
@@ -17,10 +17,16 @@
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
         <script type="text/javascript" src="js/device.js"></script>
+        <script type="text/javascript" src="js/database.js"></script>
+        
         <script type="text/javascript" src="js/api.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/pageinit.js"></script>
 
+        <link href="css/tabmenu.css" rel="stylesheet" type="text/css" />
+        <script src="js/tabmenu.js" type="text/javascript"></script>
+ 
 
         <title>Eet.nu App</title>
     </head>
