--- a/www/contact.html
+++ b/www/contact.html
@@ -26,7 +26,7 @@
 
         $(document).off('pageinit');
         $(document).on('pageinit', '#contact', function(){    
-           $("#website").on("click",function()
+           $("#website").on("tap",function()
            {
               appBrowser("https://www.eet.nu/");
            });
