--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -111,10 +111,12 @@
             });
 
 
-            getSettings(handleSucces, handleError);
+            setTimeout(function() {
+                getSettings(handleSucces, handleError);
+            }, 200);
+            
             function handleSucces(c, a, w)
             {
-                    alert(w + c + a) ;
                     $("#category").val(c);
                     $("#distance").val(a);
                     $('#category').selectmenu('refresh');
