--- a/www/details.html
+++ b/www/details.html
@@ -31,6 +31,9 @@
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div> 
+
+        <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+
         <title>Details</title>
        <header class="header">
             <nav class="nav-container">
@@ -92,6 +95,12 @@
                {
                     description = "Dit restaurant heeft geen beschrijving";
                }
+
+
+            $('#btnback').on("tap", function() 
+            { 
+                window.history.back(-1);
+            });
 
                 if(rating != null)
                {
