button fix alleen css word nog niet goed ingeladen

--- a/www/contact.html
+++ b/www/contact.html
@@ -5,7 +5,7 @@
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
 
-        <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+        <button id="btnbackcontact" style="margin-left:5%; width:20%">Back</button>
        
         <header class="header">
             <nav class="nav-container">
@@ -25,7 +25,7 @@
 
         <script type="text/javascript">
         
-        $('#btnback').on("tap", function() 
+        $('#btnbackcontact').on("tap", function() 
         { 
             window.history.back();
         });
