--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -5,7 +5,7 @@
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
        
-      <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+      <button id="btnbackrestaurants" style="margin-left:5%; width:20%">Back</button>
 
         <header class="header">
             <nav class="nav-container">
@@ -112,7 +112,7 @@
                  });
             });
 
-            $('#btnback').on("tap", function() 
+            $('#btnbackrestaurants').on("tap", function() 
             {
                 window.history.back();
             });
