--- a/www/settings.html
+++ b/www/settings.html
@@ -4,7 +4,7 @@
         <div style="background: #f1f1f1;">
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">  
         </div>
-        <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+        <button id="btnbacksettings" style="margin-left:5%; width:20%">Back</button>
        
         <header class="header">
             <nav class="nav-container">
@@ -115,7 +115,7 @@
                 $("#waardering").prop('checked', false);
             });
 
-            $('#btnback').on("tap", function() 
+            $('#btnbacksettings').on("tap", function() 
             { 
                 window.history.back(-1);
             });
