--- a/www/details.html
+++ b/www/details.html
@@ -32,7 +32,7 @@
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div> 
 
-        <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+        <button id="btnbackdetails" style="margin-left:5%; width:20%">Back</button>
 
         <title>Details</title>
        <header class="header">
@@ -97,7 +97,7 @@
                }
 
 
-            $('#btnback').on("tap", function() 
+            $('#btnbackdetails').on("tap", function() 
             { 
                 window.history.back(-1);
             });
