--- a/www/results.html
+++ b/www/results.html
@@ -8,7 +8,7 @@
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
 
-        <button id="btnback" style="margin-left:5%; width:20%">Back</button>
+        <button id="btnbackresults" style="margin-left:5%; width:20%">Back</button>
         
         <title>Resultaten</title>
         <header class="header">
@@ -36,7 +36,7 @@
          <script type="text/javascript">
         
 
-            $('#btnback').on("tap", function() 
+            $('#btnbackresults').on("tap", function() 
             { 
                 window.history.back(-1);
             });
