--- a/www/contact.html
+++ b/www/contact.html
@@ -27,7 +27,7 @@
         
         $('#btnbackcontact').on("tap", function() 
         { 
-            window.history.back();
+            window.history.back(-1);
         });
 
         $(document).off('pageinit');
