nog een keer -1

--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -114,7 +114,7 @@
 
             $('#btnbackrestaurants').on("tap", function() 
             {
-                window.history.back();
+                window.history.back(-1);
             });
 
 
