--- a/www/results.html
+++ b/www/results.html
@@ -38,7 +38,7 @@
 
             $('#btnbackresults').on("tap", function() 
             { 
-                window.history.back(-1);
+                $.mobile.changePage("restaurants.html");
             });
 
         $(document).off('pageinit');
