--- a/www/results.html
+++ b/www/results.html
@@ -8,20 +8,21 @@
             <img src="img/eetnu-logo2.png" alt="Eet.nu" class="homeImage">
         </div>
 
-        <button id="btnbackresults" style="margin-left:5%; width:20%">Back</button>
-        
         <title>Resultaten</title>
-        <header class="header">
-            <nav class="nav-container">
-                <div class="nav-toggle">Menu</div>
-                <ul class="nav">
-                    <li> <a href ="index.html" data-transition="slide"> Home </a></li>
-                    <li> <a href ="restaurants.html" data-transition="slide"> Restaurants </a></li>
-                    <li> <a href ="contact.html" data-transition="slide"> Contact </a></li>
-                    <li> <a href ="settings.html" data-transition="slide"> Settings </a></li>  
-                </ul>
-            </nav>
-        </header>
+          <div data-role="panel" id="navpanel" data-theme="a"
+         data-display="overlay" data-position="right">
+        <div data-role="controlgroup" data-corners="false">
+            <a href ="index.html" data-transition="slide" data-role="button" style="padding: 20 20px;" data-icon="arrow-r">Home</a>
+            <a href ="restaurants.html" data-transition="slide" data-role="button" style="padding: 20 20px; margin-top: 20px;" data-icon="arrow-r">Restaurants</a>
+            <a href ="contact.html" data-transition="slide" data-role="button" style="padding: 20 20px; margin-top: 20px;" data-icon="arrow-r">Contact</a>
+            <a href ="settings.html" data-transition="slide" data-role="button" style="padding: 20 20px; margin-top: 20px;" data-icon="arrow-r">Settings</a>
+        </div>
+    </div>
+
+    <div id="header" data-role="header" data-theme="a" data-add-back-btn="true">
+        <a id="bars-button" data-icon="bars" class="ui-btn-right" style="margin-top:0px;" href="#navpanel">Menu</a>
+    </div>
+    
 
 
         <button id="btnback" class="basicText" style="display:inline-block; margin-left:5%; width:40%">vorige</button><button id="btnnext" class="basicText" style="display:inline-block; margin-left:10%; width:40%">Volgende</button>
