--- a/www/results.html
+++ b/www/results.html
@@ -54,7 +54,7 @@
                 getRestaurantByID(dataid, function(data)
                 {
                     localStorage.setItem("restaurant", data);
-                    window.location = "details.html";
+                    $.mobile.changePage( "details.html", { transition: "slide", changeHash: false });
                 });
             });
             $("#btnnext").on("tap",function()
@@ -68,16 +68,6 @@
                     disableButtons(data);
                 });
 
-            });
-            $("#btnback").on("tap",function()
-            {
-                var backurl = data.pagination.previous_page;
-                getRestaurantsByQuery(backurl, function(newdata)
-                {   
-                    data =  JSON.parse(newdata);
-                    fillListview(data);
-                    disableButtons(data);
-                });
             });
 
             function disableButtons(newdata)
