--- a/www/settings.html
+++ b/www/settings.html
@@ -101,8 +101,8 @@
 
 
 
-        $(document).off('pagebeforeshow');
-        $(document).on('pagebeforeshow', '#settings', function(){     
+        $(document).off('pagecreate ');
+        $(document).on('pagecreate ', '#settings', function(){     
 
             
         
@@ -122,7 +122,7 @@
 
             setTimeout(function() {
                 getSettings(handleSucces, handleError);
-            }, 350);
+            }, 1000);
             function handleSucces(c, a, w)
             {
                     $("#category").val(c);
