--- a/www/details.html
+++ b/www/details.html
@@ -129,7 +129,7 @@
            $("#country").append(data.address.country);
            $("#tel").append('<a href="tel:' + data.telephone + '">'+ data.telephone + '</a>');
            $("#url").append("<a id='website'>"+data.website_url+"</a>");
-           $("#nav").append('<a href="geo:'+ data.geolocation.latitude+','+ data.geolocation.latitude+'">Start Navigatie</a>');
+           $("#nav").append('<a href="geo:'+ data.geolocation.latitude+','+ data.geolocation.longitude+'">Toon op kaart</a>');
 
 
 
