--- a/www/settings.html
+++ b/www/settings.html
@@ -92,10 +92,14 @@
             <option value="20"> 20 KM </option>
             <option value="50"> 50 KM </option>
         </select>
+        <br>
         <input id="waardering" class="checkbox" type="checkbox" /><label class="basicText label" > Sorteer op waardering </label>
-       
-        <button id="btnsave" class="basicText" data-inline="true" style="margin-left:5%; width:40%">Opslaan</button>
-        <button id="btnleeg" class="basicText" data-inline="true" style="margin-left:5%; width:40%">Reset</button>
+
+        <br>
+        <br>
+        <button id="btnsave" class="basicText" style="display:inline-block; margin-left:5%; width:40%">Opslaan</button><button id="btnleeg" class="basicText" style="display:inline-block; margin-left:10%; width:40%">Reset</button>
+
+
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
         <script type="text/javascript">
 
