--- a/www/results.html
+++ b/www/results.html
@@ -22,10 +22,11 @@
     <div id="header" data-role="header" data-theme="a" data-add-back-btn="true">
         <a id="bars-button" data-icon="bars" class="ui-btn-right" style="margin-top:0px;" href="#navpanel">Menu</a>
     </div>
-    
+
+        <div class="sprite prevsprite" id="btnback" style="display:inline-block; margin-left:5%; width:80%"></div>
+        <div class="sprite nextsprite" id="btnnext" style="display:inline-block; margin-right:5%;"></div>
 
 
-        <button id="btnback" class="basicText" style="display:inline-block; margin-left:5%; width:40%">vorige</button><button id="btnnext" class="basicText" style="display:inline-block; margin-left:10%; width:40%">Volgende</button>
         <p class="homeInfo" style="margin-top: 0px;">Zoekresultaten : </p>     
 
 
