--- a/www/results.html
+++ b/www/results.html
@@ -23,9 +23,9 @@
         <a id="bars-button" data-icon="bars" class="ui-btn-right" style="margin-top:0px;" href="#navpanel">Menu</a>
     </div>
 
-        <div class="sprite prevsprite" id="btnback" style="display:inline-block; margin-left:5%; width:80%"></div>
-        <div class="sprite nextsprite" id="btnnext" style="display:inline-block; margin-right:5%;"></div>
-
+        <div class="sprite prevsprite" id="btnback" style="display:inline-block; margin-left:5%;"></div>
+        <div class="sprite nextsprite" id="btnnext" style="display:inline-block; margin-right:5%; float:right;"></div>
+ 
 
         <p class="homeInfo" style="margin-top: 0px;">Zoekresultaten : </p>     
 
