--- a/www/settings.html
+++ b/www/settings.html
@@ -99,8 +99,9 @@
         <br>
 
 
-        <div class="sprite save" id="btnsave" style="display:inline-block; margin-left:5%; width:80%"></div>
-        <div class="sprite reset" id="btnleeg" style="display:inline-block; margin-right:5%;"></div>
+        <div class="sprite save" id="btnsave" style="display:inline-block; margin-left:5%;"></div>
+        <div class="sprite reset" id="btnleeg" style="display:inline-block; margin-right:5%; float:right;"></div>
+
 
 
         <p class="basicText homeFooter">Deze App is gemaakt door Louis Hol en Jarno van Wijgerden.</p>
