--- a/www/details.html
+++ b/www/details.html
@@ -57,8 +57,7 @@
             <p id="country" class="basicText"> Land : </p>
             <p id="tel" class="basicText"> Telefoon : </p>
             <p id="url" class="basicText"> Website : </p>
-            <p id="nav" class="basicText"></p>
-
+            <p id="nav" class="basicText">Start navigatie</p>
 
             </div>
         </div>
@@ -140,7 +139,18 @@
               appBrowser(url);
            });
 
+           $("#nav").on("click", function()
+           {
+                alert("Navigatie wordt nu gestart");
+                launchnavigator.navigate([data.geolocation.latitude,data.geolocation.longitude], null, onSuccess, onError);
+           });
 
+            function onSuccess(){
+                alert2("Successfully launched navigator");
+            }
+            function onError(errMsg){
+                alert2("Error launching navigator: "+errMsg);
+            }
 
         });
     </script>
