--- a/www/restaurants.html
+++ b/www/restaurants.html
@@ -115,7 +115,7 @@
             });
 
             setTimeout(function() {
-                getSettings(handleSucces, handleError);
+                //getSettings(handleSucces, handleError);
             }, 1000);
             
             function handleSucces(c, a, w)
