--- a/www/settings.html
+++ b/www/settings.html
@@ -129,7 +129,7 @@
             });
 
             setTimeout(function() {
-                //getSettings(handleSucces, handleError);
+                getSettings(handleSucces, handleError);
             }, 1000);
             function handleSucces(c, a, w)
             {
