--- a/www/results.html
+++ b/www/results.html
@@ -96,19 +96,19 @@
 
                 if(nexturl == null)
                 {
-                    $("#btnnext").prop("disabled",true);
+                    $("#btnnext").hide();
                 }
                 else
                 {
-                    $("#btnnext").prop("disabled",false);
+                    $("#btnnext").show();
                 }
                 if(backurl == null)
                 {
-                    $("#btnback").prop("disabled",true);
+                    $("#btnback").hide();
                 }
                 else
                 {
-                    $("#btnback").prop("disabled",false);
+                    $("#btnback").show();
                 }
             }
             function fillListview(newdata)
