--- a/www/results.html
+++ b/www/results.html
@@ -96,19 +96,19 @@
 
                 if(nexturl == null)
                 {
-                    $("#btnnext").hide();
+                    $("#btnnext").css('visibility','hidden');
                 }
                 else
                 {
-                    $("#btnnext").show();
+                    $("#btnnext").css('visibility','visible');
                 }
                 if(backurl == null)
                 {
-                    $("#btnback").hide();
+                    $("#btnback").css('visibility','hidden');
                 }
                 else
                 {
-                    $("#btnback").show();
+                    $("#btnback").css('visibility','visible');
                 }
             }
             function fillListview(newdata)
