--- a/www/settings.html
+++ b/www/settings.html
@@ -129,7 +129,7 @@
             });
 
             setTimeout(function() {
-                getSettings(handleSucces);
+                getSettings(handleSucces, handleError);
             }, 1000);
             function handleSucces(c, a, w)
             {
@@ -146,7 +146,10 @@
                         $("#waardering").prop('checked', false);
                     }
             }
-
+            function handleError(err)
+            {
+                alert("error : " + err);
+            }
 
         });
         /*$(document).ready(function()
